# xod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  VERSION.toml  deny.toml  release-plz.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: audit.yml  check.yml  ci.yaml  release-plz.yml  release.yml
src/: bitops.rs  cli_parser.rs  lib.rs  main.rs  utils.rs
src/parsers/: ast.rs  bitops.rs  compare.rs  exprs.rs  funcs.rs  general.rs  loops.rs  mod.rs  numbers.rs  utils.rs
src/repl/: event.rs  help.rs  helper.rs  mod.rs
