[package]
name = "xod"
version = "1.0.1"
edition = "2024"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/annie444/xod"
description = "A tiny REPL for bitwise arithmetic and expression evaluation."
categories = ["command-line-utilities", "compilers", "mathematics"]
documentation = "https://github.com/annie444/xod"
keywords = ["repl", "bitwise", "arithmetic", "cli"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-print = { version = "0.3.7", features = ["terminfo"] }
nom = "8.0.0"
nom_locate = { version = "5.0.0", features = ["runtime-dispatch-simd"] }
prettytable-rs = "0.10.0"
rustyline = { version = "16.0.0", features = [
  "case_insensitive_history_search",
  "with-fuzzy",
  "custom-bindings",
  "derive",
] }
shellexpand = "3.1.1"
thiserror = "2.0.12"

[profile.dev]
debug = true
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
